roaring_dart/lib/generated_bindings.dart


  /// Check if an items is present, using context from a previous insert for speed
  /// optimization.
  ///
  /// `context` will be used to store information between calls to make bulk
  /// operations faster. `*context` should be zero-initialized before the first
  /// call to this function.
  ///
  /// Modifying the bitmap in any way (other than `-bulk` suffixed functions)
  /// will invalidate the stored context, calling this function with a non-zero
  /// context after doing any modification invokes undefined behavior.
  ///
  /// In order to exploit this optimization, the caller should call this function
  /// with values with the same "key" (high 16 bits of the value) consecutively.
  bool roaring_bitmap_contains_bulk(
    ffi.Pointer<roaring_bitmap_t> r,
    ffi.Pointer<roaring_bulk_context_t> context,
    int val,
  ) {
    return _roaring_bitmap_contains_bulk(
      r,
      context,
      val,
    );
  }

  late final _roaring_bitmap_contains_bulkPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bulk_context_t>,
              ffi.Uint32)>>('roaring_bitmap_contains_bulk');
  late final _roaring_bitmap_contains_bulk =
      _roaring_bitmap_contains_bulkPtr.asFunction<
          bool Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<roaring_bulk_context_t>, int)>();

  /// Get the cardinality of the bitmap (number of elements).
  int roaring_bitmap_get_cardinality(
    ffi.Pointer<roaring_bitmap_t> r,
  ) {
    return _roaring_bitmap_get_cardinality(
      r,
    );
  }

  late final _roaring_bitmap_get_cardinalityPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_get_cardinality');
  late final _roaring_bitmap_get_cardinality =
      _roaring_bitmap_get_cardinalityPtr
          .asFunction<int Function(ffi.Pointer<roaring_bitmap_t>)>();

  /// Returns the number of elements in the range [range_start, range_end).
  int roaring_bitmap_range_cardinality(
    ffi.Pointer<roaring_bitmap_t> r,
    int range_start,
    int range_end,
  ) {
    return _roaring_bitmap_range_cardinality(
      r,
      range_start,
      range_end,
    );
  }

  late final _roaring_bitmap_range_cardinalityPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<roaring_bitmap_t>, ffi.Uint64,
              ffi.Uint64)>>('roaring_bitmap_range_cardinality');
  late final _roaring_bitmap_range_cardinality =
      _roaring_bitmap_range_cardinalityPtr
          .asFunction<int Function(ffi.Pointer<roaring_bitmap_t>, int, int)>();

  /// Returns true if the bitmap is empty (cardinality is zero).
  bool roaring_bitmap_is_empty(
    ffi.Pointer<roaring_bitmap_t> r,
  ) {
    return _roaring_bitmap_is_empty(
      r,
    );
  }

  late final _roaring_bitmap_is_emptyPtr = _lookup<
          ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_is_empty');
  late final _roaring_bitmap_is_empty = _roaring_bitmap_is_emptyPtr
      .asFunction<bool Function(ffi.Pointer<roaring_bitmap_t>)>();

  /// Empties the bitmap.  It will have no auxiliary allocations (so if the bitmap
  /// was initialized in client memory via roaring_bitmap_init(), then a call to
  /// roaring_bitmap_clear() would be enough to "free" it)
  void roaring_bitmap_clear(
    ffi.Pointer<roaring_bitmap_t> r,
  ) {
    return _roaring_bitmap_clear(
      r,
    );
  }

  late final _roaring_bitmap_clearPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_clear');
  late final _roaring_bitmap_clear = _roaring_bitmap_clearPtr
      .asFunction<void Function(ffi.Pointer<roaring_bitmap_t>)>();

  /// Convert the bitmap to a sorted array, output in `ans`.
  ///
  /// Caller is responsible to ensure that there is enough memory allocated, e.g.
  ///
  /// ans = malloc(roaring_bitmap_get_cardinality(bitmap) * sizeof(uint32_t));
  void roaring_bitmap_to_uint32_array(
    ffi.Pointer<roaring_bitmap_t> r,
    ffi.Pointer<ffi.Uint32> ans,
  ) {
    return _roaring_bitmap_to_uint32_array(
      r,
      ans,
    );
  }

  late final _roaring_bitmap_to_uint32_arrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<ffi.Uint32>)>>('roaring_bitmap_to_uint32_array');
  late final _roaring_bitmap_to_uint32_array =
      _roaring_bitmap_to_uint32_arrayPtr.asFunction<
          void Function(
              ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<ffi.Uint32>)>();

  /// Store the bitmap to a bitset. This can be useful for people
  /// who need the performance and simplicity of a standard bitset.
  /// We assume that the input bitset is originally empty (does not
  /// have any set bit).
  ///
  /// bitset_t * out = bitset_create();
  /// // if the bitset has content in it, call "bitset_clear(out)"
  /// bool success = roaring_bitmap_to_bitset(mybitmap, out);
  /// // on failure, success will be false.
  /// // You can then query the bitset:
  /// bool is_present = bitset_get(out,  10011 );
  /// // you must free the memory:
  /// bitset_free(out);
  bool roaring_bitmap_to_bitset(
    ffi.Pointer<roaring_bitmap_t> r,
    ffi.Pointer<bitset_t> bitset,
  ) {
    return _roaring_bitmap_to_bitset(
      r,
      bitset,
    );
  }

  late final _roaring_bitmap_to_bitsetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<bitset_t>)>>('roaring_bitmap_to_bitset');
  late final _roaring_bitmap_to_bitset =
      _roaring_bitmap_to_bitsetPtr.asFunction<
          bool Function(
              ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<bitset_t>)>();

  /// Convert the bitmap to a sorted array from `offset` by `limit`, output in `ans`.
  ///
  /// Caller is responsible to ensure that there is enough memory allocated, e.g.
  ///
  /// ans = malloc(roaring_bitmap_get_cardinality(limit) * sizeof(uint32_t));
  ///
  /// Return false in case of failure (e.g., insufficient memory)
  bool roaring_bitmap_range_uint32_array(
    ffi.Pointer<roaring_bitmap_t> r,
    int offset,
    int limit,
    ffi.Pointer<ffi.Uint32> ans,
  ) {
    return _roaring_bitmap_range_uint32_array(
      r,
      offset,
      limit,
      ans,
    );
  }

  late final _roaring_bitmap_range_uint32_arrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>, ffi.Size, ffi.Size,
              ffi.Pointer<ffi.Uint32>)>>('roaring_bitmap_range_uint32_array');
  late final _roaring_bitmap_range_uint32_array =
      _roaring_bitmap_range_uint32_arrayPtr.asFunction<
          bool Function(ffi.Pointer<roaring_bitmap_t>, int, int,
              ffi.Pointer<ffi.Uint32>)>();

  /// Remove run-length encoding even when it is more space efficient.
  /// Return whether a change was applied.
  bool roaring_bitmap_remove_run_compression(
    ffi.Pointer<roaring_bitmap_t> r,
  ) {
    return _roaring_bitmap_remove_run_compression(
      r,
    );
  }

  late final _roaring_bitmap_remove_run_compressionPtr = _lookup<
          ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_remove_run_compression');
  late final _roaring_bitmap_remove_run_compression =
      _roaring_bitmap_remove_run_compressionPtr
          .asFunction<bool Function(ffi.Pointer<roaring_bitmap_t>)>();

  /// Convert array and bitmap containers to run containers when it is more
  /// efficient; also convert from run containers when more space efficient.
  ///
  /// Returns true if the result has at least one run container.
  /// Additional savings might be possible by calling `shrinkToFit()`.
  bool roaring_bitmap_run_optimize(
    ffi.Pointer<roaring_bitmap_t> r,
  ) {
    return _roaring_bitmap_run_optimize(
      r,
    );
  }

  late final _roaring_bitmap_run_optimizePtr = _lookup<
          ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_run_optimize');
  late final _roaring_bitmap_run_optimize = _roaring_bitmap_run_optimizePtr
      .asFunction<bool Function(ffi.Pointer<roaring_bitmap_t>)>();

  /// If needed, reallocate memory to shrink the memory usage.
  /// Returns the number of bytes saved.
  int roaring_bitmap_shrink_to_fit(
    ffi.Pointer<roaring_bitmap_t> r,
  ) {
    return _roaring_bitmap_shrink_to_fit(
      r,
    );
  }

  late final _roaring_bitmap_shrink_to_fitPtr = _lookup<
          ffi.NativeFunction<ffi.Size Function(ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_shrink_to_fit');
  late final _roaring_bitmap_shrink_to_fit = _roaring_bitmap_shrink_to_fitPtr
      .asFunction<int Function(ffi.Pointer<roaring_bitmap_t>)>();

  /// Write the bitmap to an output pointer, this output buffer should refer to
  /// at least `roaring_bitmap_size_in_bytes(r)` allocated bytes.
  ///
  /// See `roaring_bitmap_portable_serialize()` if you want a format that's
  /// compatible with Java and Go implementations.  This format can sometimes be
  /// more space efficient than the portable form, e.g. when the data is sparse.
  ///
  /// Returns how many bytes written, should be `roaring_bitmap_size_in_bytes(r)`.
  ///
  /// This function is endian-sensitive. If you have a big-endian system (e.g., a mainframe IBM s390x),
  /// the data format is going to be big-endian and not compatible with little-endian systems.
  int roaring_bitmap_serialize(
    ffi.Pointer<roaring_bitmap_t> r,
    ffi.Pointer<ffi.Char> buf,
  ) {
    return _roaring_bitmap_serialize(
      r,
      buf,
    );
  }

  late final _roaring_bitmap_serializePtr = _lookup<
      ffi.NativeFunction<
          ffi.Size Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<ffi.Char>)>>('roaring_bitmap_serialize');
  late final _roaring_bitmap_serialize =
      _roaring_bitmap_serializePtr.asFunction<
          int Function(ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<ffi.Char>)>();

  /// Use with `roaring_bitmap_serialize()`.
  ///
  /// (See `roaring_bitmap_portable_deserialize()` if you want a format that's
  /// compatible with Java and Go implementations).
  ///
  /// This function is endian-sensitive. If you have a big-endian system (e.g., a mainframe IBM s390x),
  /// the data format is going to be big-endian and not compatible with little-endian systems.
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_deserialize(
    ffi.Pointer<ffi.Void> buf,
  ) {
    return _roaring_bitmap_deserialize(
      buf,
    );
  }

  late final _roaring_bitmap_deserializePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<roaring_bitmap_t> Function(
              ffi.Pointer<ffi.Void>)>>('roaring_bitmap_deserialize');
  late final _roaring_bitmap_deserialize =
      _roaring_bitmap_deserializePtr.asFunction<
          ffi.Pointer<roaring_bitmap_t> Function(ffi.Pointer<ffi.Void>)>();

  /// Use with `roaring_bitmap_serialize()`.
  ///
  /// (See `roaring_bitmap_portable_deserialize_safe()` if you want a format that's
  /// compatible with Java and Go implementations).
  ///
  /// This function is endian-sensitive. If you have a big-endian system (e.g., a mainframe IBM s390x),
  /// the data format is going to be big-endian and not compatible with little-endian systems.
  ///
  /// The difference with `roaring_bitmap_deserialize()` is that this function checks that the input buffer
  /// is a valid bitmap.  If the buffer is too small, NULL is returned.
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_deserialize_safe(
    ffi.Pointer<ffi.Void> buf,
    int maxbytes,
  ) {
    return _roaring_bitmap_deserialize_safe(
      buf,
      maxbytes,
    );
  }
